--- a/Plank-Config/PKGBUILD
+++ b/Plank-Config/PKGBUILD
@@ -1,23 +1,30 @@
 # Maintainer: Ernesto Ricart <ernest2193@gmail.com>
 
-pkgname=Plank-Config
-pkgver=1.1.1
-pkgrel=1
+pkgname=plank-config
+pkgver=1.2
+pkgrel=2
 pkgdesc="A tool to configure Plank Dock"
 arch=('i686' 'x86_64')
 url="https://github.com/ernest21/Plank-Config/"
 license=('GPL')
-depends=('plank' )
+depends=('plank')
 makedepends=('vala')
-md5sums=('f4dd8172a093251e4d1f7a586d0dfadc')
+source=($pkgname-$pkgver.tar.gz::https://github.com/ernest21/Plank-Config/archive/v$pkgver.tar.gz)
+md5sums=('7b5ee3842c079166d70aadb9eb14fd77')
+install=${pkgname}.install
 
-source=($pkgname-$pkgver.tar.gz::https://github.com/ernest21/Plank-Config/archive/v1.1.1.tar.gz)
-
-package() {
-  cd "$srcdir/$pkgname-$pkgver"
-  ./autogen.sh
-  make
-  make DESTDIR="$pkgdir/" install
+prepare() {
+    cd "${srcdir}/Plank-Config-${pkgver}"
+    chmod +x ./autogen.sh
+    NOCONFIGURE=1 ./autogen.sh
 }
-
-
+build() {
+    cd "${srcdir}/Plank-Config-${pkgver}"
+    ./configure \
+        --prefix=/usr
+    make
+}
+package() {
+    cd "${srcdir}/Plank-Config-${pkgver}"
+    make DESTDIR="${pkgdir}" install
+}
