--- a/Plank-Config/PKGBUILD
+++ b/Plank-Config/PKGBUILD
@@ -1,16 +1,16 @@
 # Maintainer: Ernesto Ricart <ernest2193@gmail.com>
 
 pkgname=plank-config
-pkgver=1.2
-pkgrel=2
+pkgver=1.3
+pkgrel=1
 pkgdesc="A tool to configure Plank Dock"
 arch=('i686' 'x86_64')
 url="https://github.com/ernest21/Plank-Config/"
 license=('GPL')
 depends=('plank')
 makedepends=('vala')
-source=($pkgname-$pkgver.tar.gz::https://github.com/ernest21/Plank-Config/archive/v$pkgver.tar.gz)
-md5sums=('7b5ee3842c079166d70aadb9eb14fd77')
+source=($pkgname-$pkgver.tar.gz::https://github.com/ernest21/Plank-Config/archive/1.3.tar.gz)
+md5sums=('20e2f31848726fedb2b82b0cc58bff30 ')
 install=${pkgname}.install
 
 prepare() {
