--- a/super-wingpanel-bzr/PKGBUILD
+++ b/super-wingpanel-bzr/PKGBUILD
@@ -2,12 +2,13 @@
 
 pkgname=super-wingpanel-bzr
 pkgver=r184
-pkgrel=1
+pkgrel=2
 pkgdesc='A super sexy space-saving top panel'
 arch=('i686' 'x86_64')
 url="https://code.launchpad.net/~heathbar/wingpanel/super-wingpanel"
 license=('GPL3')
-depends=('granite-bzr' 'libindicator-gtk3' 'libwnck3')
+license=('GPL3')
+depends=('granite-bzr' 'libindicator-gtk3')
 optdepends=('indicator-datetime: Display date and time'
             'indicator-pantheon-session-bzr: Pantheon session indicator'
             'indicator-power: Battery idicator')
@@ -15,16 +16,23 @@ makedepends=('bzr' 'cmake' 'vala')
 provides=("${pkgname%-*}")
 conflicts=("${pkgname%-*}")
 install="${pkgname%-*}.install"
-source=("bzr+lp:/~heathbar/super-wingpanel/stable")
-sha256sums=('SKIP')
+source=("bzr+lp:/~heathbaprintf "r%s" "$(bzr revno)"r/super-wingpanel/stable" 
+				"$pkgname-$pkgver.patch")
+sha256sums=('SKIP'
+						'accf6f4bbb16a8e8dc3a9511b3c6b4dc3fb33cb16c86dc361907628d97dc0d7b')
 
+prepare() {
+	cd $srcdir
+	patch -u stable/CMakeLists.txt < $pkgname-$pkgver.patch
+}
 pkgver() {
-  cd stable
+  cd $srcdir/stable
+
   printf "r%s" "$(bzr revno)"
 }
 
 build() {
-  cd stable
+  cd $srcdir/stable
 
   if [[ -d build ]]; then
     rm -rf build
@@ -36,7 +44,7 @@ build() {
 }
 
 package() {
-  cd stable/build
+  cd $srcdir/stable/build
 
   make DESTDIR="${pkgdir}" install
 }
